[project]
name = "jar-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksandr Riadinskyi",email = "aradinskij6@gmail.com"}
]
package-mode = false
requires-python = ">= 3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
